plugins {
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

group = 'nextstep'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    runtimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.rest-assured:rest-assured:5.3.1'
}

test {
    useJUnitPlatform()
}

tasks.register('deploy', Exec) {
    dependsOn bootJar
    group = 'deployment'
    description = 'Executes the deployment script.'

    doFirst {
        def scriptFile = file('./deploy.sh')
        if (!scriptFile.exists()) {
            throw new GradleException("The deploy.sh file does not exist.")
        }

        if (!scriptFile.canExecute()) {
            println "deploy.sh is not executable. Attempting to run chmod +x..."
            scriptFile.setExecutable(true)
            if (!scriptFile.canExecute()) {
                throw new GradleException("Failed to make deploy.sh executable. Please run chmod +x manually.")
            }
        }
    }

    commandLine './deploy.sh'
}
